[project]
name = "my-poetry-project"
version = "0.1.0"
description = ""
authors = [
    {name = "hansanhha",email = "example@example.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "my_poetry_project", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
